Ajustes no login, implementando views admin.

--- a/templates/admin/basics/menu.html.twig
+++ b/templates/admin/basics/menu.html.twig
@@ -25,26 +25,27 @@
                     <li>
                         <a href="#"><i class="fa fa-users"></i> <span>Usuários</span></a>
                         <ul>
-                            <li><a href="../../../layout_1/LTR/index.html" id="layout1">Cadastros</a></li>
+                            <li><a href="{{ route('admin.cadastros.list') }}" id="layout1">Cadastros</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-pagelines"></i> <span>Plantas</span></a>
                         <ul>
                             <li><a href="layout_navbar_fixed.html">Novo</a></li>
-                            <li><a href="layout_navbar_sidebar_fixed.html">Inativos</a></li>
-                            <li><a href="boxed_mini.html">Boxed with mini sidebar</a></li>
-                            <li><a href="boxed_full.html">Boxed full width</a></li>
+                            <li><a href="layout_navbar_sidebar_fixed.html">Lista</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-cogs"></i> <span>Parâmetros</span></a>
                         <ul>
-                            <li><a href="colors_primary.html">Primary palette</a></li>
-                            <li><a href="colors_danger.html">Danger palette</a></li>
-                            <li><a href="colors_success.html">Success palette</a></li>
-                            <li><a href="colors_warning.html">Warning palette</a></li>
-                            <li><a href="colors_info.html">Info palette</a></li>
+                            <li><a href="colors_danger.html">Categorias</a></li>
+                            <li><a href="colors_success.html">Continentes</a></li>
+                            <li><a href="colors_warning.html">Endemismo</a></li>
+                            <li><a href="colors_primary.html">Espécies</a></li>
+                            <li><a href="colors_info.html">Gênero</a></li>
+                            <li><a href="colors_info.html">Origem</a></li>
+                            <li><a href="colors_info.html">Países</a></li>
+                            <li><a href="colors_info.html">Tipos de Folha</a></li>
                         </ul>
                     </li>
                     <li><a href="index.html"><i class="fa fa-id-card-o"></i> <span>Glossário Ilustrado</span></a></li>
