--- a/templates/admin/basics/header.html.twig
+++ b/templates/admin/basics/header.html.twig
@@ -109,8 +109,8 @@
             <li class="dropdown dropdown-user">
                 <a class="dropdown-toggle" data-toggle="dropdown">
                     <img src="assets/images/placeholder.jpg" alt="">
-                    <span>{{ AuthAdmin.user().id }}</span>
-                    <span>{{ AuthAdmin.user().usuario|capitalize }}</span>
+                    <span>{{ Auth.user().id }}</span>
+                    <span>{{ Auth.user().usuario|capitalize }}</span>
                     <i class="caret"></i>
                 </a>
 
