Finalizando primeiro protótipo de amostragem.

--- a/templates/admin/Categorias/list.html.twig
+++ b/templates/admin/Categorias/list.html.twig
@@ -30,6 +30,7 @@
 									<tr>
 										<th>#</th>
 										<th>Categoria</th>
+										<th>Status</th>
 										<th class="text-center"></th>
 									</tr>
 								</thead>
