--- a/templates/admin/Glossarios/create.html.twig
+++ b/templates/admin/Glossarios/create.html.twig
@@ -25,16 +25,20 @@
 							</div>
 							<div class="row">
 								<div class="col-md-10 col-md-offset-1">
-									<form action="{{ route('admin.glossarios.store') }}" method="post">
+									<form action="{{ route('admin.glossarios.store') }}" method="post" enctype="multipart/form-data">
 										<div class="panel panel-flat">
 											<div class="panel-body">
 
 												<fieldset class="content-group">
-													<div class="form-group">
+													<div class="form-group col-md-6">
 														<label for="nome" class="control-label">Glossario:</label>
 														<input name="nome" id="nome" type="text" class="form-control" placeholder="Nome">
 													</div>
-													<div class="form-group">
+													<div class="form-group col-md-6">
+														<label for="nome" class="control-label">Imagem:</label>
+														<input name="imagem" id="imagem" type="file" class="form-control file-styled-success">
+													</div>
+													<div class="form-group col-md-12">
 														<label for="nome" class="control-label">Descrição:</label>
 														<textarea name="descricao" id="descricao" class="form-control" placeholder="Descrição"></textarea>
 													</div>
