--- a/templates/admin/Referencias/create.html.twig
+++ b/templates/admin/Referencias/create.html.twig
@@ -21,26 +21,22 @@
 						<!-- Lista usuários -->
 						<div class="panel panel-flat">
 							<div class="panel-heading">
-								<h5 class="panel-title">Edição de Glossario</h5>
+								<h5 class="panel-title">Referencia</h5>
 							</div>
 							<div class="row">
 								<div class="col-md-10 col-md-offset-1">
-
-									<form action="{{ route('admin.glossarios.update', {'id': glossarios.id}) }}" method="post" enctype="multipart/form-data">
+									<form action="{{ route('admin.referencias.store') }}" method="post">
 										<div class="panel panel-flat">
 											<div class="panel-body">
+
 												<fieldset class="content-group">
-													<div class="form-group col-md-6">
-														<label for="nome" class="control-label">Glossario:</label>
-														<input name="nome" id="nome" type="text" class="form-control" placeholder="Nome" value="{{ glossarios.nome }}">
+													<div class="form-group">
+														<label for="texto" class="control-label">Texto:</label>
+														<textarea name="texto" id="texto" class="form-control" placeholder="Texto"></textarea>
 													</div>
-													<div class="form-group col-md-6">
-														<label for="nome" class="control-label">Imagem: <img src="../assets/imagens/glossario/{{ glossarios.imagem }}" height="50px" /></label>
-														<input name="imagem" id="imagem" type="file" class="form-control file-styled-success" placeholder="{{ glossarios.imagem }}">
-													</div>
-													<div class="form-group col-md-12">
-														<label for="nome" class="control-label">Descrição:</label>
-														<textarea name="descricao" id="descricao" class="form-control" placeholder="Descrição"> {{ glossarios.descricao }}</textarea>
+													<div class="form-group">
+														<label for="link" class="control-label">Link:</label>
+														<input name="link" id="link" type="text" class="form-control" placeholder="Link">
 													</div>
 												</fieldset>
 
