--- a/templates/admin/basics/menu.html.twig
+++ b/templates/admin/basics/menu.html.twig
@@ -41,7 +41,7 @@
                             <li><a href="{{ route('admin.categorias.list') }}">Categorias</a></li>
                             <li><a href="{{ route('admin.continentes.list') }}">Continentes</a></li>
                             <li><a href="colors_warning.html">Endemismo</a></li>
-                            <li><a href="colors_primary.html">Espécies</a></li>
+                            <li><a href="{{ route('admin.especies.list') }}">Espécies</a></li>
                             <li><a href="{{ route('admin.generos.list') }}">Gênero</a></li>
                             <li><a href="{{ route('admin.origens.list') }}">Origem</a></li>
                             <li><a href="{{ route('admin.paises.list') }}">Países</a></li>
@@ -49,7 +49,7 @@
                         </ul>
                     </li>
                     <li><a href="{{ route('admin.glossarios.list') }}"><i class="fa fa-id-card-o"></i> <span>Glossário Ilustrado</span></a></li>
-                    <li><a href="index.html"><i class="fa fa-indent"></i> <span>Referências</span></a></li>
+                    <li><a href="{{ route('admin.referencias.list') }}"><i class="fa fa-indent"></i> <span>Referências</span></a></li>
                     <!-- /main -->
                 </ul>
             </div>
