--- a/templates/busca-avancada.html.twig
+++ b/templates/busca-avancada.html.twig
@@ -66,36 +66,13 @@
             <div class="main col-md-6 col-lg-6">
                 <!-- page-title start -->
                 <!-- ================ -->
-                <h3 class="page-title">Sibol!</h3>
+                <h3 class="page-title">Busca Avançada</h3>
                 <div class="separator-2"></div>
                 <!-- page-title end -->
 
                 <div class="col-md-12">
                     <div class="well well-sm">
 
-                    </div>
-                </div>
-
-                <div class="image-box style-3-b">
-                    <div class="row margin-clear">
-                        <div class="col-sm-6 col-md-4 col-lg-4">
-                            <div class="shadow bordered">
-                                <img src="./assets/images/isolada_grande.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-md-8 col-lg-8">
-                            <div class="body">
-                                <h3 class="title"><a href="">Já conhece essa espécie?</a></h3>
-                                <p class="small mb-10"><i class="pl-10 icon-tag-1"></i> <strong>Nome científico:</strong> Mimosa scabrella Benth. </p>
-                                <div class="separator-2"></div>
-                                <p class="small mb-10"><i class="pl-10 icon-tag-1"></i> <strong>Nomes populares:</strong> bracatinga, bracatinga-amarela, abracatinga, anizeiro, bracatinga-branca, bracatinga-comum, bracatinga-vermelha, bracatinha, mandengo, maracatinga, paracatinga. </p>
-                                <div class="separator-2"></div>
-                                <p class="small mb-10"><i class="pl-10 icon-tag-1"></i> <strong>Resumo:</strong>  Árvore inerme de até 20 m de altura, com casca externa áspera ou com pequenas fissuras. Os ramos, folhas, flores e frutos possuem pubescência ferrugínea. Suas folhas são compostas, paripinadas, alternas, com 3 a 7 pares de pinas ... </p>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 col-md-12 col-lg-12">
-                            <a class="btn btn-default-transparent ol-sm-12 col-md-12 col-lg-12">Conheça melhor</a>
-                        </div>
                     </div>
                 </div>
             </div>
