--- a/templates/admin/Especies/list.html.twig
+++ b/templates/admin/Especies/list.html.twig
@@ -40,7 +40,7 @@
 									<tr>
 										<td>{{ especie.id }}</td>
 										<td>{{ especie.especie }}</td>
-										<td><img src="../assets/imagens/especies/{{ especie.imagem }}" height="50px" /></td>
+										<td><img src="../../assets/imagens/especies/{{ especie.imagem }}" height="50px" /></td>
 										<td>
 											<span class="label label-{{ especie.status == 1 ? 'success' : 'danger' }}">
 												{{ especie.status == 1 ? 'Ativo' : 'Inativo' }}
