--- a/templates/admin/Glossarios/list.html.twig
+++ b/templates/admin/Glossarios/list.html.twig
@@ -42,7 +42,7 @@
 										<td>{{ glossario.id }}</td>
 										<td>{{ glossario.nome }}</td>
 										<td>{{ glossario.descricao }}</td>
-										<td><img src="../assets/imagens/glossario/{{ glossario.imagem }}" height="50px" /></td>
+										<td><img src="../../assets/imagens/glossario/{{ glossario.imagem }}" height="50px" /></td>
 										<td>
 											<span class="label label-{{ glossario.status == 1 ? 'success' : 'danger' }}">
 												{{ glossario.status == 1 ? 'Ativo' : 'Inativo' }}
