--- a/templates/basics/lateralD.html.twig
+++ b/templates/basics/lateralD.html.twig
@@ -1,3 +1,4 @@
+{% if not Auth.check() %}
 <!-- sidebar start -->
 <!-- ================ -->
 <aside class="col-md-3 col-lg-3 ">
@@ -57,3 +58,4 @@
     </div>
 </aside>
 <!-- sidebar end -->
+{% endif %}
