--- a/templates/basics/menu.html.twig
+++ b/templates/basics/menu.html.twig
@@ -31,7 +31,7 @@
                         <div class="header-left clearfix ">
                             <!-- logo -->
                             <div id="logo-mobile" class="logo">
-                                <a href="layout.php"><img id="logo-img-mobile" src="assets/images/logoPBR.png" alt="The Project" style="max-height:60px !important; padding: -2px 3px;" /></a>
+                                <a href="{{ route('index') }}"><img id="logo-img-mobile" src="assets/images/logoPBR.png" alt="The Project" style="max-height:60px !important; padding: -2px 3px;" /></a>
                             </div>
                         </div>
                         <!-- header-left end -->
