--- a/templates/admin/Especies/edit.html.twig
+++ b/templates/admin/Especies/edit.html.twig
@@ -35,7 +35,7 @@
 														<input name="especie" id="especie" type="text" class="form-control" placeholder="Espécie" value="{{ especies.especie }}">
 													</div>
 													<div class="form-group">
-														<label for="nome" class="control-label">Imagem: <img src="../assets/imagens/especies/{{ especies.imagem }}" height="50px" /></label>
+														<label for="nome" class="control-label">Imagem: <img src="../../assets/imagens/especies/{{ especies.imagem }}" height="50px" /></label>
 														<input name="imagem" id="imagem" type="file" class="form-control file-styled-success" placeholder="{{ especies.imagem }}">
 													</div>
 												</fieldset>
