--- a/templates/admin/Glossarios/edit.html.twig
+++ b/templates/admin/Glossarios/edit.html.twig
@@ -35,7 +35,7 @@
 														<input name="nome" id="nome" type="text" class="form-control" placeholder="Nome" value="{{ glossarios.nome }}">
 													</div>
 													<div class="form-group col-md-6">
-														<label for="nome" class="control-label">Imagem: <img src="../assets/imagens/glossario/{{ glossarios.imagem }}" height="50px" /></label>
+														<label for="nome" class="control-label">Imagem: <img src="../../assets/imagens/glossario/{{ glossarios.imagem }}" height="50px" /></label>
 														<input name="imagem" id="imagem" type="file" class="form-control file-styled-success" placeholder="{{ glossarios.imagem }}">
 													</div>
 													<div class="form-group col-md-12">
