--- a/templates/admin/basics/menu.html.twig
+++ b/templates/admin/basics/menu.html.twig
@@ -21,34 +21,58 @@
                 <ul class="navigation navigation-main navigation-accordion">
 
                     <!-- Main -->
-                    <li class="active"><a href="index.html"><i class="icon-home4"></i> <span>Início</span></a></li>
-                    <li>
-                        <a href="#"><i class="fa fa-users"></i> <span>Usuários</span></a>
-                        <ul>
-                            <li><a href="{{ route('admin.cadastros.list') }}" id="layout1">Cadastros</a></li>
-                        </ul>
+                    <li {% if menu == 'index' %}  class="active" {% endif %}>
+                        <a href="{{ route('admin.index') }}"><i class="icon-home4"></i> <span>Início</span></a>
                     </li>
-                    <li>
-                        <a href="#"><i class="fa fa-pagelines"></i> <span>Plantas</span></a>
-                        <ul>
-                            <li><a href="layout_navbar_fixed.html">Novo</a></li>
-                            <li><a href="layout_navbar_sidebar_fixed.html">Lista</a></li>
-                        </ul>
+                    <li {% if menu == 'cadastros' %}  class="active" {% endif %}>
+                        <a href="{{ route('admin.cadastros.list') }}"><i class="fa fa-id-card-o"></i> <span>Cadastros</span></a>
                     </li>
-                    <li>
+                    <li {% if menu == 'plantas' %}  class="active" {% endif %}>
+                        <a href="{{ route('admin.plantas.list') }}"><i class="fa fa-pagelines"></i> <span>Plantas</span></a>
+                    </li>
+                    <li
+                        {% if menu == 'categorias' or
+                              menu == 'continentes' or
+                              menu == 'especies' or
+                              menu == 'generos' or
+                              menu == 'origens' or
+                              menu == 'paises' or
+                              menu == 'tipoFolha'
+                        %}
+                            class="active"
+                        {% endif %}
+                    >
                         <a href="#"><i class="fa fa-cogs"></i> <span>Parâmetros</span></a>
                         <ul>
-                            <li><a href="{{ route('admin.categorias.list') }}">Categorias</a></li>
-                            <li><a href="{{ route('admin.continentes.list') }}">Continentes</a></li>
-                            <li><a href="{{ route('admin.especies.list') }}">Espécies</a></li>
-                            <li><a href="{{ route('admin.generos.list') }}">Gênero</a></li>
-                            <li><a href="{{ route('admin.origens.list') }}">Origem</a></li>
-                            <li><a href="{{ route('admin.paises.list') }}">Países</a></li>
-                            <li><a href="{{ route('admin.tipoFolha.list') }}">Tipos de Folha</a></li>
+                            <li {% if menu == 'categorias' %}  class="active" {% endif %}>
+                                <a href="{{ route('admin.categorias.list') }}">Categorias</a>
+                            </li>
+                            <li {% if menu == 'continentes' %}  class="active" {% endif %}>
+                                <a href="{{ route('admin.continentes.list') }}">Continentes</a>
+                            </li>
+                            <li {% if menu == 'especies' %}  class="active" {% endif %}>
+                                <a href="{{ route('admin.especies.list') }}">Espécies</a>
+                            </li>
+                            <li {% if menu == 'generos' %}  class="active" {% endif %}>
+                                <a href="{{ route('admin.generos.list') }}">Gênero</a>
+                            </li>
+                            <li {% if menu == 'origens' %}  class="active" {% endif %}>
+                                <a href="{{ route('admin.origens.list') }}">Origem</a>
+                            </li>
+                            <li {% if menu == 'paises' %}  class="active" {% endif %}>
+                                <a href="{{ route('admin.paises.list') }}">Países</a>
+                            </li>
+                            <li {% if menu == 'tipoFolha' %}  class="active" {% endif %}>
+                                <a href="{{ route('admin.tipoFolha.list') }}">Tipos de Folha</a>
+                            </li>
                         </ul>
                     </li>
-                    <li><a href="{{ route('admin.glossarios.list') }}"><i class="fa fa-id-card-o"></i> <span>Glossário Ilustrado</span></a></li>
-                    <li><a href="{{ route('admin.referencias.list') }}"><i class="fa fa-indent"></i> <span>Referências</span></a></li>
+                    <li {% if menu == 'glossarios' %}  class="active" {% endif %}>
+                        <a href="{{ route('admin.glossarios.list') }}"><i class="fa fa-id-card-o"></i> <span>Glossário Ilustrado</span></a>
+                    </li>
+                    <li {% if menu == 'referencias' %}  class="active" {% endif %}>
+                        <a href="{{ route('admin.referencias.list') }}"><i class="fa fa-indent"></i> <span>Referências</span></a>
+                    </li>
                     <!-- /main -->
                 </ul>
             </div>
